<resources>
    <string name="app_name">iCare</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bmi">BMI</string>
    <string name="title_activity_diet">Diet</string>
    <color name="holo_blue_light">#ff33b5e5</color>

    <!-- Math Alarm Activity -->

    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>

    <string name="button_new">New</string>

    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>

    <!-- Alert -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
    <string name="clear_button_text">Clear</string>
    <string name="minus_button_text">-</string>


    <color name="title_background_color">#000000</color>

    <string name="button_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_all_user_list">AllUserList</string>
    <string name="title_section0">Doctor</string>
    <string name="title_section1">Prescription</string>
    <string name="title_section2">Contact with Doctor</string>
    <string name="title_section3">Doctor Details</string>
    <string name="title_section4">Prescription Details</string>
    <string name="title_section5">Order Details</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_customer_name">Customer Name</string>
    <string name="hint_customer_email">Customer Email</string>
    <string name="hint_customer_phone">Customer Phone</string>
    <string name="hint_customer_street_address">Street Address</string>
    <string name="hint_customer_city">City</string>
    <string name="hint_customer_state">State</string>
    <string name="hint_customer_zip_code">Zip Code</string>
    <string name="hint_customer_note">Note</string>
    <string name="no_customer">You have not added any doctor yet</string>
    <string name="title_activity_doctor_cal">DoctorCal</string>
    <string name="title_activity_msg">MsgActivity</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_prescription__list2">prescription_List2</string>
    <string name="title_activity_show_prescription">showPrescription</string>
</resources>
